feat: refactor ListMtadata api response to move next_page_token to MetadataList
